2008-01-11  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* data/cairo-compmgr.schemas.in:
	* plugins/freeze/ccm-freeze.c:
	* src/ccm-display.c:
	* src/ccm-display.h:
	* src/ccm-pixmap-backend.c:
	* src/ccm-screen.c:
	* src/ccm-screen.h: Push use_buffered_pixmap option in screen config

2008-01-11  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-buffered-shm.c: Add buffered property to activate surface
                                     buffering, disable buffering by default.
    * src/ccm-screen.c: set redraw as high priority.
    * src/ccm-window.c: Don't destruct and damage window on unmap and on map. 
                        Activate pixmap buffering on first window redraw.

2008-01-09  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-buffered-shm.c: Create buffered surface in window format
                                     instead always in ARGB format.

2008-01-07  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-region.c:
    * src/ccm.h: Add ccm_region_get_xrectangles function
    
    * src/ccm-pixmap-image.c:
    * src/ccm-pixmap-shm.c: Use XFixesSetGCClipRegion instead copy all damaged
                            rectangles

2008-01-06  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/fade/Makefile.am:
    * plugins/freeze/Makefile.am:
    * plugins/menu-animation/Makefile.am:
    * plugins/opacity/Makefile.am:
    * plugins/shadow/Makefile.am:
    * src/Makefile.am: Use O3 compilation optimisation, can improve 
                       ccm_drawable_get_damage_path.

2008-01-06  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * data/Makefile.am: Fix schemas clean rules
    
    * plugins/shadow/ccm-shadow.c:
    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-buffered-shm.c: Fixes memory leaks

2008-01-06  Nicolas Bruguier  <gandalfn@club-internet.fr>
    
    * configure.ac:
    * data/Makefile.am: