@@ -48,6 +48,7 @@ G_BEGIN_DECLS
 #define CCM_IS_PIXMAP_BACKEND(obj)          (G_TYPE_CHECK_INSTANCE_TYPE ((obj), CCM_TYPE_PIXMAP_BACKEND))
 #define CCM_IS_PIXMAP_BACKEND_CLASS(klass)  (G_TYPE_CHECK_CLASS_TYPE ((klass), CCM_TYPE_PIXMAP_BACKEND))
 #define CCM_PIXMAP_BACKEND_GET_CLASS(obj)   (G_TYPE_INSTANCE_GET_CLASS ((obj), CCM_TYPE_PIXMAP_BACKEND, CCMPixmapBackendClass))
+#define CCM_IS_PIXMAP_BUFFERED(obj)			(CCM_IS_PIXMAP_BUFFERED_SHM (obj) || CCM_IS_PIXMAP_BUFFERED_IMAGE (obj))
 
 typedef union _CCMPixmapBackendClass CCMPixmapBackendClass;
 typedef union _CCMPixmapBackend CCMPixmapBackend;
